Got a cow that hypnotises you when you click it.

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -17,7 +17,7 @@ body {
     overflow-y: auto;
 }
 
-body {
+.background {
     // background: radial-gradient(
     //     ellipse farthest-corner at center bottom,
     //     #923792 0%,
