--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -5,16 +5,17 @@
 html,
 body {
     width: 100%;
-    height: 100%;
+    // height: 100%;
     margin: 0;
     padding: 0;
 
-    font-family: 'Macondo', cursive;
+    font-family: "Macondo", cursive;
 
     display: flex;
     flex-direction: column;
 
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .background {
@@ -26,14 +27,31 @@ body {
     // center bottom / 100% fixed;
 
     background: linear-gradient(
-        to bottom,
-        #191919 0%,
-        #1E1E1E 50%,
-        #191919 100%,
-    )
-    center bottom / 100% fixed;
+            to bottom,
+            #191919 0%,
+            #1e1e1e 50%,
+            #191919 100%
+        )
+        center bottom / 100% fixed;
 }
-// overflow-y: scroll;
+
+.sideGlyphs {
+    font-size: 0.5em;
+    font-family: "Noto Sans Old Persian", sans-serif;
+    writing-mode: vertical-rl;
+    overflow: hidden;
+    white-space: nowrap;
+    max-width: fit-content;
+    // max-height: 100%;
+
+    display: flex;
+    flex-direction: column;
+
+    &>div {
+        flex-basis: 0px;
+        // flex-grow: 1;
+    }
+}
 
 .content {
     max-width: 80%;
@@ -46,9 +64,9 @@ body {
     }
 }
 
-.cursor{
+.cursor {
     &::after {
-        position:absolute;
+        position: absolute;
         content: "|";
         // transform: translate(0, -10px);
         transform: scale(0.5, 1.2);
