--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -36,22 +36,69 @@ body {
 }
 
 .sideGlyphs {
+    text-align: start;
+    writing-mode: vertical-rl;
+    white-space: nowrap;
     font-size: 0.5em;
     font-family: "Noto Sans Old Persian", sans-serif;
-    writing-mode: vertical-rl;
-    overflow: hidden;
-    white-space: nowrap;
-    max-width: fit-content;
+
+    // font-size: 0.5em;
+    // writing-mode: vertical-rl;
+    // // overflow: visible;
+    // white-space: nowrap;
+    // max-width: fit-content;
     // max-height: 100%;
 
+    // display: flex;
+    // flex-direction: column;
+
+    // &>div {
+    //     flex-basis: 0px;
+    //     // flex-grow: 1;
+    // }
+}
+
+main {
+    display: flex;
+    flex-direction: row;
+    // font-size: 12px;
+    width: 100%;
+    max-width: 100%;
+    justify-content: space-between;
+
+    // overflow: hidden;
+
+    min-height: 100vh;
+}
+
+section {
     display: flex;
     flex-direction: column;
 
-    &>div {
-        flex-basis: 0px;
-        // flex-grow: 1;
+    // & > 
+}
+
+.side {
+    flex: 0px 1 0;
+    // flex-grow: 1;
+    overflow: hidden;
+}
+
+.limiter {
+    flex: 1 1;
+
+    display: flex;
+    flex-direction: row;
+    // align-items: center;
+    justify-content: center;
+
+    & > div {
+        // display: flex;
+        // justify-content: center;
     }
 }
+
+
 
 .content {
     max-width: 80%;
