--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -2,15 +2,13 @@
  * COPYRIGHT 2022 Phil Bladen www.philbladen.co.uk
  */
 
-@import "./cow.scss";
-
 // Theme colours:
 $colBackground: #1e1e1e;
 
 html,
 body {
     width: 100%;
-    // height: 100%;
+    height: 100vh;
     margin: 0;
     padding: 0;
 
@@ -46,21 +44,8 @@ body {
     white-space: nowrap;
     font-size: 0.5em;
     font-family: "Noto Sans Old Persian", sans-serif;
-
-    // font-size: 0.5em;
-    // writing-mode: vertical-rl;
-    // // overflow: visible;
-    // white-space: nowrap;
-    // max-width: fit-content;
-    // max-height: 100%;
-
-    // display: flex;
-    // flex-direction: column;
-
-    // &>div {
-    //     flex-basis: 0px;
-    //     // flex-grow: 1;
-    // }
+    color: #333;
+    user-select: none;
 }
 
 main {
@@ -106,9 +91,15 @@ section {
 
 
 .content {
-    max-width: 80%;
+    max-width: 50%;
 }
 
+@media screen and (max-width: 2000px) {
+    .content {
+        max-width: 80%;
+        // background-color: red;
+    }
+}
 @media screen and (max-width: 1000px) {
     .content {
         max-width: 90%;
@@ -152,35 +143,83 @@ section {
     }
 }
 
+
+
+#violationTemplate {
+    & th,td {
+        // padding-bottom: 5px;
+        // border: 5px $colBackground solid;
+
+        // outline: none;
+        border: none;
+        padding: 5px 10px 5px 10px;
+        margin: 0px;
+        
+    }
+
+    & td + td,
+    th + th { border-left: 5px solid $colBackground; }
+    border-top: 5px solid $colBackground;
+}
+
 #violationsContent {
     font-family: Montserrat;
     font-size: 0.25em;
 
     display: flex;
     flex-direction: column;
+
+    & tr:first-child {
+        border-top: none;
+    }
 }
 
-#violationTemplate {
-    & th,td {
-        padding-bottom: 10px;
-        border: 5px $colBackground solid;
-        
-    }
+#loader {
+    background: linear-gradient(
+        to bottom,
+        #191919 0%,
+        #1e1e1e 50%,
+        #191919 100%
+    )
+    center bottom / 100% fixed;
 }
 
 .loaderIcon {
     max-width: 30%;
-    animation: loader 1s infinite;
+    animation: popin 0.2s, loader 1s infinite;
+    animation-delay: 0s, 0.2s;
+}
+
+.loaderHide {
+    animation: popout 0.5s;
+}
+
+@keyframes popin {
+    0% {
+        transform: scale(0.0);
+    }
+    100% {
+        transform: scale(1.0);
+    }
+}
+
+@keyframes popout {
+    from {
+        transform: scale(1.0);
+    }
+    to {
+        transform: scale(0.0);
+    }
 }
 
 @keyframes loader {
     0% {
-        transform: scale(0.3) rotate(-180deg);
-    }
-    50% {
         transform: scale(1.0) rotate(0deg);
     }
+    // 50% {
+    //     transform: scale(1.0) rotate(0deg);
+    // }
     100% {
-        transform: scale(0.3) rotate(180deg);
+        transform: scale(1.0) rotate(360deg);
     }
 }
