--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -2,23 +2,32 @@
  * COPYRIGHT 2022 Phil Bladen www.philbladen.co.uk
  */
 
-// Theme colours:
-$colBackground: #1e1e1e;
+// Theme colours: https://coolors.co/palette/ee6055-60d394-aaf683-ffd97d-ff9b85
+$colBackground: #1b1a27;
+$accentColor: #ee6055;
+$accentColor2: #1b1a27; //#af7cda;
+$colContentBackground: #ffffff;
 
 html,
 body {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     margin: 0;
     padding: 0;
 
-    font-family: "Macondo", cursive;
+    font-family: "Roboto Condensed", cursive;
 
     display: flex;
     flex-direction: column;
 
     overflow-y: auto;
     overflow-x: hidden;
+
+    // Prevent blue selection when tapping on mobiles:
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-tap-highlight-color: transparent;
+
+    scroll-behavior: smooth;
 }
 
 .background {
@@ -65,7 +74,25 @@ section {
     display: flex;
     flex-direction: column;
 
-    // & > 
+    // & >
+}
+
+#titlebackground {
+    background-color: $colBackground;
+    position: absolute;
+    top: 0px;
+    height: 100vh;
+    width: 100%;
+    z-index: -1;
+}
+
+#introbackground {
+    background-color: $colContentBackground;
+    position: absolute;
+    top: 100vh;
+    height: 100vh;
+    width: 100%;
+    z-index: -1;
 }
 
 .side {
@@ -88,10 +115,8 @@ section {
     }
 }
 
-
-
 .content {
-    max-width: 50%;
+    max-width: 50%; // Was 50 !!!
 }
 
 @media screen and (max-width: 2000px) {
@@ -102,7 +127,7 @@ section {
 }
 @media screen and (max-width: 1000px) {
     .content {
-        max-width: 90%;
+        max-width: 100%; //!!! was 90
         // background-color: red;
     }
 
@@ -114,16 +139,55 @@ section {
 }
 
 .cursor {
-    &::after {
-        position: absolute;
-        content: "|";
-        // transform: translate(0, -10px);
-        transform: scale(0.5, 1.2);
+    // &::after {
+    //     position: absolute;
+    //     content: "|";
+    //     // transform: translate(0, -10px);
+    //     transform: scale(0.5, 1.2);
+    // }
+}
+
+#title {
+    user-select: none;
+    font-family: "Roboto Condensed", sans-serif;
+    font-style: normal;
+    // font-weight: 800;
+}
+
+#mootext {
+    fill-rule: evenodd;
+    clip-rule: evenodd;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke-miterlimit: 1.5;
+    margin-bottom: -0.4em;
+    & path {
+        fill: none;
+        //stroke: rgb(248, 79, 57);
+
+        stroke-width: 8.33px;
+
+        stroke: $accentColor;
+        transition: 1s;
+        stroke-dasharray: 1000;
+        stroke-dashoffset: 1000;
+        animation: firstAnimation 2s linear forwards;
     }
 }
 
-.title {
+@keyframes firstAnimation {
+    to {
+        stroke-dashoffset: 0;
+    }
+}
 
+.titlePop {
+    font-family: Macondo;
+    padding: 0px;
+    margin: 0px;
+    display: inline;
+    color: $accentColor;
+    font-weight: bold;
 }
 
 .subsection {
@@ -131,10 +195,16 @@ section {
     margin-bottom: 0.3em;
 }
 
+.subsectionTitle {
+    font-size: 1.4em;
+    color: $accentColor;
+}
+
 .subsectionContent {
-    font-family: Montserrat;
-    font-size: 0.25em;
+    font-family: Epilogue;
+    font-size: 0.35em;
     text-align: justify;
+    font-weight: 100;
 
     & br {
         content: " ";
@@ -143,10 +213,43 @@ section {
     }
 }
 
+.introArrows {
+    transition: 0.2s;
+    cursor: pointer;
+    flex: 1 0;
+    font-family: Roboto;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
 
+    & svg {
+        max-width: 0.5em;
+    }
+
+    & path {
+        fill: none;
+        stroke: $accentColor;
+        stroke-width: 15px;
+        // color: $accentColor;
+    }
+    &:hover {
+        transform: scale(1.1);
+    }
+}
+
+.text-white {
+    transition: 0.5s;
+    color: white;
+}
+
+.text-accent {
+    animation: fadetoaccent 1s linear forwards;
+    color: $accentColor;
+}
 
 #violationTemplate {
-    & th,td {
+    & th,
+    td {
         // padding-bottom: 5px;
         // border: 5px $colBackground solid;
 
@@ -154,11 +257,12 @@ section {
         border: none;
         padding: 5px 10px 5px 10px;
         margin: 0px;
-        
     }
 
     & td + td,
-    th + th { border-left: 5px solid $colBackground; }
+    th + th {
+        border-left: 5px solid $colBackground;
+    }
     border-top: 5px solid $colBackground;
 }
 
@@ -175,13 +279,14 @@ section {
 }
 
 #loader {
-    background: linear-gradient(
-        to bottom,
-        #191919 0%,
-        #1e1e1e 50%,
-        #191919 100%
-    )
-    center bottom / 100% fixed;
+    background-color: $colBackground;
+    // background: linear-gradient(
+    //         to bottom,
+    //         #191919 0%,
+    //         #1e1e1e 50%,
+    //         #191919 100%
+    //     )
+    //     center bottom / 100% fixed;
 }
 
 .loaderIcon {
@@ -191,35 +296,161 @@ section {
 }
 
 .loaderHide {
-    animation: popout 0.5s;
+    animation: popout 0.5s forwards;
+}
+
+.bob {
+    animation: bob 1s infinite ease-in-out;
+}
+
+#titleArrow {
+    position: absolute;
+    // transform: translate(0, -1em);
+    // & path {
+    //       stroke: #fff;
+    // }
+
+    & path:first-of-type {
+        animation: dashmove 0.75s linear infinite;
+        fill: none;
+        stroke: $accentColor;
+        stroke-width: 2px;
+        stroke-dasharray: 5, 5, 0, 0;
+        stroke-dashoffset: 0;
+    }
+
+    & path:not(:first-of-type) {
+        animation: bob 0.75s ease-in-out infinite;
+        animation-delay: 0.25s;
+        stroke: none;
+        fill: $accentColor;
+    }
+}
+
+#transition-splash-bg {
+    background-color: $accentColor2;
+    position: absolute;
+    height: 0vh;
+    width: 100%;
+    z-index: 2;
+}
+
+.transition-splash-bg-transitioning {
+    animation: growdown 1s linear forwards;
+}
+
+.intro-transition-shape-transitioning path {
+    transition: 0.5s;
+    d: path(
+        "M -30.45,-57.86 -30.45,442.6 53.8,443.8 53.8,396.3 179.5,396.3 179.5,654.7 193.3,654.7 193.3,589.1 253.1,589.1 253.1,561.6 276.1,561.6 276.1,531.2 320.6,531.2 320.6,238.6 406.5,238.6 406.5,213.9 435.6,213.9 435.6,246.2 477,246.2 477,289.9 527.6,289.9 527.6,263.3 553.7,263.3 553.7,280.4 592,280.4 592,189.2 742.3,189.2 742.3,259.5 762.2,259.5 762.2,103.7 776,103.7 776,77.11 791.3,77.11 791.3,18.21 852.7,18.21 852.7,86.61 871.1,86.61 871.1,231 878.7,240.5 878.7,320.3 891,320.3 891,434.3 923.2,434.3 923.2,145.5 940.1,145.5 940.1,117 976.9,117 976.9,139.8 1031,139.8 1031,284.2 1041,284.2 1041,242.4 1176,242.4 1176,282.3 1192,282.3 1192,641.4 1210,641.4 1210,692.7 1225,692.7 1225,599.6 1236,599.6 1236,527.4 1248,527.4 1248,500.8 1273,500.8 1273,523.6 1291,523.6 1291,652.8 1316,652.8 1316,533.1 1337,533.1 1337,502.7 1356,502.7 1356,523.6 1414,523.6 1414,491.3 1432,491.3 1432,523.6 1486,523.6 1486,-57.86 Z"
+    );
+}
+
+.intro-transition-wrap-transitioning {
+    animation: movedown 1s linear forwards;
+}
+
+.intro-transition-wrap {
+    position: absolute;
+    z-index: -1;
+    margin: -5px 0 0 0; /* Hide the gap */
+    pointer-events: none;
+    top: 100vh;
+    overflow: hidden;
+}
+
+.intro-transition-shape {
+    height: 100vh;
+    width: 100%;
+    display: block;
+    fill: $accentColor2;
+}
+
+@keyframes fadetoaccent {
+    0% {
+    }
+    50% {
+        color: white;
+    }
+    100% {
+        color: $accentColor;
+    }
+}
+
+@keyframes movedown {
+    0% {
+        padding-top: 0;
+    }
+    50% {
+        padding-top: 20vh;
+    }
+    100% {
+        padding-top: 100vh;
+    }
+}
+
+@keyframes growdown {
+    0% {
+        top: 0vh;
+        height: 0;
+    }
+    50% {
+        top: 0vh;
+        height: 20vh;
+    }
+    100% {
+        top: -0px;
+        height: 100vh;
+    }
+}
+
+@keyframes dashmove {
+    from {
+        stroke-dashoffset: 10;
+    }
+    to {
+        stroke-dashoffset: 0;
+    }
+}
+
+@keyframes bob {
+    0% {
+        transform: translate(0, -0.025em);
+    }
+    50% {
+        transform: translate(0, 0.025em);
+    }
+    100% {
+        transform: translate(0, -0.025em);
+    }
 }
 
 @keyframes popin {
     0% {
-        transform: scale(0.0);
+        transform: scale(0);
     }
     100% {
-        transform: scale(1.0);
+        transform: scale(1);
     }
 }
 
 @keyframes popout {
     from {
-        transform: scale(1.0);
+        transform: scale(1);
     }
     to {
-        transform: scale(0.0);
+        transform: scale(0);
     }
 }
 
 @keyframes loader {
     0% {
-        transform: scale(1.0) rotate(0deg);
+        transform: scale(1) rotate(0deg);
     }
     // 50% {
     //     transform: scale(1.0) rotate(0deg);
     // }
     100% {
-        transform: scale(1.0) rotate(360deg);
+        transform: scale(1) rotate(360deg);
     }
 }
