--- a/src/style/test.css
+++ b/src/style/test.css
@@ -3,3 +3,14 @@
 @tailwind components;
 
 @tailwind utilities;
+
+@keyframes slide {
+    from {
+        opacity: 0;
+        transform: translateX(-20%);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
